# emasons

./: .gitignore  manage.py  package.json  pyproject.toml  tailwind.config.js
apps/inventory/: forms.py  urls.py  views.py
apps/inventory/utils/: calculator.py
apps/users/: models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py
emason_mkt/: asgi.py  settings.py  urls.py  wsgi.py
emasons/: asgi.py  settings.py  urls.py  wsgi.py
static/assets/css/: tailwind.output.css
templates/: base.html  index.html
templates/inventory/: calculator.html  index.html
templates/partials/: navbar.html  sidebar.html
templates/users/: login.html
